idf_component_register(SRCS 
                      "private_drv_02a2.c"
                      "private_drv_03a3.c"
                      "private_drv_04a4.c"
                      "private_drv_05a5.c"
                      "private_drv_06a6.c"
                      "private_drv_07a7.c"
                      "private_drv_08a8.c"
                      "private_drv_09a9.c"
                      "private_drv_0aaa.c"
                      "private_drv_0bab.c"
                      "private_drv_0bab_update.c"
                      "private_drv_0cac.c"
                      "private_drv_0cac_update.c"
                      "private_drv_0dad.c"
                      "private_drv_0eae.c"
                      "private_drv_11b1.c"
                      "private_drv_13b3.c"
                      "private_drv_14b4.c"
                      "private_drv_api_m.c"
                      "private_drv_api_s.c"
                      "private_drv_basic.c"
                      "private_drv_can.c"
                      "private_drv_com.c"
                      "private_drv_opt.c"
                      "private_drv_shell.c"
                       
                       INCLUDE_DIRS "include")
 